------------------------------------------------------------------------
r1803 | gaser | 2021-04-15 22:24:26

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_conf_factorial.m
M       cat_surf_results.m
M       html/cat.html

Changed: Some minor changes to cat_surf_results.m and cat_conf_factorial.m
------------------------------------------------------------------------
r1802 | gaser | 2021-04-15 21:03:25 +0200 (Do, 15 Apr 2021) | 16 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
A       cat_conf_factorial.m
M       cat_io_data2mat.m
M       cat_stat_factorial_design.m
M       cat_stat_spm.m
M       html/cat.html
M       tbx_cfg_cat.m

(1) Added:   Added new batch for factorial designs for VBM that skips many
             options that are not needed for VBM. There are two models 
             available for cross-sectional and longitudinal data. 
(2) Changed: Some smaller changes to cat_stat_spm.m and cat_io_data2mat.m.
(3) Changed: Updated basic design that is called from CAT12 GUI. 

------------------------------------------------------------------------
r1801 | gaser | 2021-04-14 16:47:05 +0200 (Mi, 14 Apr 2021) | 9 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_run_newcatch.m
M       html/cat.html

Fixed: Corrected error messages for Piwik.


------------------------------------------------------------------------
r1800 | gaser | 2021-04-14 16:13:23 +0200 (Mi, 14 Apr 2021) | 11 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat12.m
M       cat_run_newcatch.m
M       html/cat.html

(1) Changed: Added field "TotalUsers" to Piwik information to obtain a relaible
             count of overall users.
(2) Changed: Added release number to error messages for Piwik.

------------------------------------------------------------------------
r1799 | gaser | 2021-04-09 13:01:51 +0200 (Fr, 09 Apr 2021) | 6 lines

Changed paths:
M       CHANGES.txt
M       cat12.m
